# flopy_mf6_work

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: linting.yml
notebooks/implementing/gwf_advtidal/: gwf_advtidal.ipynb
notebooks/implementing/gwf_advtidal/model/: gwf_advtidal.dis  gwf_advtidal.evt  gwf_advtidal.ghb  gwf_advtidal.ghb.obs  gwf_advtidal.ghb.obs.csv  gwf_advtidal.ghb.ts  gwf_advtidal.ic  gwf_advtidal.ims  gwf_advtidal.nam  gwf_advtidal.npf  gwf_advtidal.obs  gwf_advtidal.obs.head.csv  gwf_advtidal.oc  gwf_advtidal.rch1  gwf_advtidal.rch1.ts  gwf_advtidal.rch2  gwf_advtidal.rch2.ts  gwf_advtidal.rch3  gwf_advtidal.rch3.ts  gwf_advtidal.riv  gwf_advtidal.riv.ts  gwf_advtidal.sto  gwf_advtidal.tdis  gwf_advtidal.wel  gwf_advtidal.wel.ts  mfsim.lst  mfsim.nam
notebooks/implementing/gwf_bcf2ss/: gwf_bcf2ss_p1a.ipynb  gwf_bcf2ss_p2a.ipynb
notebooks/implementing/gwf_bcf2ss/model_p1a/: gwf_bcf2ss  gwf_bcf2ss.dis  gwf_bcf2ss.ic  gwf_bcf2ss.ims  gwf_bcf2ss.lst  gwf_bcf2ss.nam  mfsim.lst  (+7 more)
notebooks/implementing/gwf_fhb/: gwf_fhb.ipynb
notebooks/implementing/gwf_sfr_p01/: gwf_sfr_p01.ipynb
notebooks/implementing/gwf_twri01/: gwf_twri01.ipynb
notebooks/learning/: gwf_advtidal.ipynb  gwf_bcf2ss.ipynb  gwf_fhb.ipynb  gwf_sfr_p01.ipynb  gwf_twri01.ipynb
notebooks/testing/gwf_advtidal/: gwf_advtidal.ipynb
notebooks/testing/gwf_bcf2ss/: gwf_bcf2ss.ipynb
notebooks/testing/gwf_fhb/: gwf_fhb.ipynb
notebooks/testing/gwf_twri01/: gwf_twri01.ipynb
src/flopy_mf6_work/: __init__.py
src/flopy_mf6_work/gwf/: bcf2ss.py  twri01.py
(+185 files in other folders)
